Cleanup for index page and added project section

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,11 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Site za DUMP Internship 2022/23 predavanje na temu web APIja.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Struktura
 
-## Documentation
+Predavanje ce biti podjeljeno na 3 termina u kojima cemo obraditi:
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+1. Osnove klijent - server arhitekture i izradu CRUD apija
+2. Autentikaciju i autorizaciju apija + napredne feature
+3. Povezivanje frontend aplikacije sa apijem
