Finished first lecture

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,8 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Site za DUMP Internship 2022/23 predavanje na temu web APIja.
+
+Predavanje je podjeljeno na 3 termina u kojima cemo proci izradu modernog CRUD apija,
+dodavanje biznis logike, autentikaciju i autorizaciju, te na kraju povezivanje apija sa frontend aplikacijom.
+
+Kroz predavanja cemo koristiti dotnet i next.js tech stack.
